--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            style="@style/TitleStyle" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+            style="@style/TitleStyle" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:textStyle="bold"/>
     <Button
             android:text="PARKING 1"
             android:layout_width="111dp"
             android:layout_height="140dp" android:id="@+id/p1_button"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/title_text"
-    />
+            android:fontFamily="@font/roboto"/>
     <Button
             android:text="PARKING 2"
             android:layout_width="111dp"
@@ -30,14 +31,14 @@
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/title_text" app:layout_constraintStart_toEndOf="@+id/p1_button"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/p3_button"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp" android:fontFamily="@font/roboto"/>
     <Button
             android:text="PARKING 3"
             android:layout_width="111dp"
             android:layout_height="140dp" android:id="@+id/p3_button"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/title_text" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp"/>
+            android:layout_marginEnd="24dp" android:fontFamily="@font/roboto"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -47,38 +48,82 @@
             android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp" android:layout_marginTop="68dp"
             app:layout_constraintTop_toBottomOf="@+id/p2_button" app:layout_constraintHorizontal_bias="0.0"
-            android:hint="@string/what_is_your_name"/>
+            android:hint="@string/what_is_your_name" android:textColor="@android:color/black"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:inputType="textShortMessage"
             android:ems="10"
             android:id="@+id/license_edit"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp" android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/name_edit" app:layout_constraintHorizontal_bias="0.0"
-            android:hint="@string/what_is_your_license"/>
+            android:hint="@string/what_is_your_license" android:textColor="@android:color/black"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:inputType="textShortMessage"
             android:ems="10"
-            android:id="@+id/ brand_edit"
+
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/license_edit" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.0"
-            android:hint="@string/what_is_your_brand"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
+            android:hint="@string/what_is_your_brand" android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
+            android:textColor="@android:color/black"/>
+    <Button
+            android:text="Delete"
+            android:layout_width="165dp"
             android:layout_height="wrap_content"
-            android:id="@+id/parking_view" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/delete_button"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginBottom="60dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/roboto" android:textColor="@android:color/black" android:textAlignment="center"
+            android:textSize="14sp" android:textStyle="normal"/>
+
+    <Button
+            android:text="Update"
+            android:layout_width="165dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/update_button"
+            android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textAlignment="center" android:textColor="@android:color/black" android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/p2_button" android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toTopOf="@+id/name_edit" android:textSize="16sp"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.6"/>
+            app:layout_constraintBaseline_toBaselineOf="@+id/delete_button"
+            style="@style/Widget.AppCompat.Button.Colored" android:fontFamily="@font/roboto"
+            android:textColor="@android:color/black" android:textAlignment="center" android:textSize="14sp"
+            android:textStyle="normal"/>
+    <TextView
+            android:text="no available"
+            android:layout_width="110dp"
+            android:layout_height="23dp"
+            android:id="@+id/no_available1_view"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:textAlignment="center"
+            app:layout_constraintBaseline_toBaselineOf="@+id/no_available2_view"
+            android:textColor="@android:color/black"/>
+    <TextView
+            android:text="no available"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="150dp" android:id="@+id/no_available2_view" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/p2_button"
+            android:textAlignment="center"
+            android:layout_marginBottom="37dp" app:layout_constraintBottom_toTopOf="@+id/name_edit"
+            android:textColor="@android:color/black"/>
+    <TextView
+            android:text="no available"
+            android:layout_width="110dp"
+            android:layout_height="23dp"
+            android:id="@+id/no_available3_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp"
+            android:textAlignment="center"
+            app:layout_constraintBaseline_toBaselineOf="@+id/no_available2_view"
+            android:textColor="@android:color/black"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
