--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,39 +40,38 @@
             app:layout_constraintTop_toBottomOf="@+id/title_text" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="24dp" android:fontFamily="@font/roboto"/>
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="240dp"
+            android:layout_height="39dp"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/name_edit" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp" android:layout_marginTop="68dp"
-            app:layout_constraintTop_toBottomOf="@+id/p2_button" app:layout_constraintHorizontal_bias="0.0"
-            android:hint="@string/what_is_your_name" android:textColor="@android:color/black"/>
+            android:layout_marginEnd="24dp"
+            android:hint="@string/what_is_your_name" android:textColor="@android:color/black"
+            tools:layout_editor_absoluteY="313dp"/>
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="240dp"
+            android:layout_height="39dp"
             android:inputType="textShortMessage"
             android:ems="10"
             android:id="@+id/license_edit"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/name_edit" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/name_edit"
             android:hint="@string/what_is_your_license" android:textColor="@android:color/black"/>
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="240dp"
+            android:layout_height="39dp"
             android:inputType="textShortMessage"
             android:ems="10"
 
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/license_edit" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/license_edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp"
             android:hint="@string/what_is_your_brand" android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black" android:id="@+id/brand_edit"/>
     <Button
             android:text="Delete"
             android:layout_width="165dp"
@@ -107,13 +106,15 @@
             android:textColor="@android:color/black"/>
     <TextView
             android:text="no available"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="150dp" android:id="@+id/no_available2_view" android:layout_marginTop="8dp"
+            android:layout_width="112dp"
+            android:layout_height="23dp"
+            android:id="@+id/no_available2_view" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/p2_button"
             android:textAlignment="center"
             android:layout_marginBottom="37dp" app:layout_constraintBottom_toTopOf="@+id/name_edit"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/no_available3_view"
+            app:layout_constraintStart_toEndOf="@+id/no_available1_view" android:layout_marginStart="8dp"/>
     <TextView
             android:text="no available"
             android:layout_width="110dp"
@@ -124,6 +125,34 @@
             android:textAlignment="center"
             app:layout_constraintBaseline_toBaselineOf="@+id/no_available2_view"
             android:textColor="@android:color/black"/>
+    <TextView
+            android:text="Name :"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/name_txtview" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            app:layout_constraintEnd_toStartOf="@+id/name_edit" android:layout_marginEnd="24dp"
+            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"
+            android:textColor="@android:color/black" android:textSize="16sp" tools:layout_editor_absoluteY="322dp"/>
+    <TextView
+            android:text="License :"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/license_txtview" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/name_txtview"
+            app:layout_constraintEnd_toStartOf="@+id/license_edit" android:layout_marginEnd="24dp"
+            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"
+            android:textColor="@android:color/black" android:textSize="16sp"/>
+    <TextView
+            android:text="Brand :"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content" android:id="@+id/brand_txtview"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/license_txtview"
+            app:layout_constraintEnd_toStartOf="@+id/brand_edit" android:layout_marginEnd="24dp"
+            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"
+            android:textColor="@android:color/black" android:textSize="16sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
