--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,14 @@
             android:textStyle="bold"/>
     <Button
             android:text="PARKING 1"
-            android:layout_width="111dp"
+            android:layout_width="105dp"
             android:layout_height="140dp" android:id="@+id/p1_button"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/title_text"
             android:fontFamily="@font/roboto"/>
     <Button
             android:text="PARKING 2"
-            android:layout_width="111dp"
+            android:layout_width="105dp"
             android:layout_height="140dp" android:id="@+id/p2_button"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/title_text" app:layout_constraintStart_toEndOf="@+id/p1_button"
@@ -34,7 +34,7 @@
             android:layout_marginEnd="8dp" android:fontFamily="@font/roboto"/>
     <Button
             android:text="PARKING 3"
-            android:layout_width="111dp"
+            android:layout_width="105dp"
             android:layout_height="140dp" android:id="@+id/p3_button"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/title_text" app:layout_constraintEnd_toEndOf="parent"
@@ -44,10 +44,11 @@
             android:layout_height="39dp"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/name_edit" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp"
+            android:id="@+id/name_edit"
             android:hint="@string/what_is_your_name" android:textColor="@android:color/black"
-            tools:layout_editor_absoluteY="313dp"/>
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/Parking_view" android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
     <EditText
             android:layout_width="240dp"
             android:layout_height="39dp"
@@ -74,8 +75,8 @@
             android:textColor="@android:color/black" android:id="@+id/brand_edit"/>
     <Button
             android:text="Delete"
-            android:layout_width="165dp"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="53dp"
             android:id="@+id/delete_button"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"
@@ -85,8 +86,8 @@
 
     <Button
             android:text="Update"
-            android:layout_width="165dp"
-            android:layout_height="wrap_content"
+            android:layout_width="131dp"
+            android:layout_height="53dp"
             android:id="@+id/update_button"
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -108,13 +109,13 @@
             android:text="no available"
             android:layout_width="112dp"
             android:layout_height="23dp"
-            android:id="@+id/no_available2_view" android:layout_marginTop="8dp"
+            android:id="@+id/no_available2_view"
             app:layout_constraintTop_toBottomOf="@+id/p2_button"
             android:textAlignment="center"
-            android:layout_marginBottom="37dp" app:layout_constraintBottom_toTopOf="@+id/name_edit"
             android:textColor="@android:color/black" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/no_available3_view"
-            app:layout_constraintStart_toEndOf="@+id/no_available1_view" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toEndOf="@+id/no_available1_view" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.533"/>
     <TextView
             android:text="no available"
             android:layout_width="110dp"
@@ -133,7 +134,8 @@
             android:layout_marginStart="24dp"
             app:layout_constraintEnd_toStartOf="@+id/name_edit" android:layout_marginEnd="24dp"
             app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"
-            android:textColor="@android:color/black" android:textSize="16sp" tools:layout_editor_absoluteY="322dp"/>
+            android:textColor="@android:color/black" android:textSize="16sp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/Parking_view"/>
     <TextView
             android:text="License :"
             android:layout_width="90dp"
@@ -153,6 +155,14 @@
             app:layout_constraintEnd_toStartOf="@+id/brand_edit" android:layout_marginEnd="24dp"
             app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center"
             android:textColor="@android:color/black" android:textSize="16sp"/>
+    <TextView
+            android:text="ChooseParking"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/Parking_view" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/no_available2_view" app:layout_constraintHorizontal_bias="0.0"
+            android:textColor="@android:color/black" android:textSize="19sp" android:textStyle="bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
