--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
             android:layout_height="140dp" android:id="@+id/p1_button"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/title_text"
-            android:fontFamily="@font/roboto"/>
+            android:fontFamily="@font/roboto" android:textColorLink="#F44336" android:textColor="#F44336"
+            android:textStyle="bold"/>
     <Button
             android:text="PARKING 2"
             android:layout_width="105dp"
@@ -31,14 +32,16 @@
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/title_text" app:layout_constraintStart_toEndOf="@+id/p1_button"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/p3_button"
-            android:layout_marginEnd="8dp" android:fontFamily="@font/roboto"/>
+            android:layout_marginEnd="8dp" android:fontFamily="@font/roboto" android:textStyle="bold"
+            android:textColor="#F44336"/>
     <Button
             android:text="PARKING 3"
             android:layout_width="105dp"
             android:layout_height="140dp" android:id="@+id/p3_button"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/title_text" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp" android:fontFamily="@font/roboto"/>
+            android:layout_marginEnd="24dp" android:fontFamily="@font/roboto" android:textStyle="bold"
+            android:textColor="#F44336"/>
     <EditText
             android:layout_width="240dp"
             android:layout_height="39dp"
