--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<layout>-->
+    <!--<data>-->
+        <!--<variable-->
+                <!--name="myName"-->
+                <!--type="com.gmail.supajeew.parking.Name"-->
+        <!--/>-->
+    <!--</data>-->
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
 
     <TextView
             android:id="@+id/title_text"
@@ -239,4 +245,5 @@
             android:textColor="@android:color/black" android:textSize="19sp" android:textStyle="bold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+<!--</layout>-->
 
