--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -58,10 +58,7 @@
                 android:hint="@string/what_is_your_name" android:textColor="@android:color/black"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/Parking_view" android:layout_marginEnd="24dp"
-                app:layout_constraintEnd_toEndOf="parent" android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"
-                />
+                app:layout_constraintEnd_toEndOf="parent" android:visibility="invisible" android:autofillHints=""/>
         <EditText
                 android:layout_width="240dp"
                 android:layout_height="39dp"
@@ -72,20 +69,17 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/Parking_view" android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent" android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"
-               />
+                android:importantForAutofill="no"/>
         <EditText
                 android:layout_width="240dp"
                 android:layout_height="39dp"
                 android:inputType="textPersonName"
+                android:ems="10"
                 android:id="@+id/name_p3_edit"
                 android:hint="@string/what_is_your_name" android:textColor="@android:color/black"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/Parking_view" android:layout_marginEnd="24dp"
                 app:layout_constraintEnd_toEndOf="parent" android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"
         />
         <EditText
                 android:layout_width="240dp"
@@ -98,9 +92,7 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/name_p1_edit"
                 android:hint="@string/what_is_your_license" android:textColor="@android:color/black"
-                android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"/>
+                android:visibility="invisible"/>
         <EditText
                 android:layout_width="240dp"
                 android:layout_height="39dp"
@@ -112,9 +104,7 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/name_p1_edit"
                 android:hint="@string/what_is_your_license" android:textColor="@android:color/black"
-                android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"/>
+                android:visibility="invisible"/>
         <EditText
                 android:layout_width="240dp"
                 android:layout_height="39dp"
@@ -127,9 +117,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/name_p1_edit"
                 android:hint="@string/what_is_your_license" android:textColor="@android:color/black"
                 android:visibility="invisible" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/brand_p3_edit" app:layout_constraintVertical_bias="0.0"
-                android:importantForAutofill="no"
-                tools:targetApi="o"/>
+                app:layout_constraintBottom_toTopOf="@+id/brand_p3_edit" app:layout_constraintVertical_bias="0.0"/>
         <EditText
                 android:layout_width="240dp"
                 android:layout_height="39dp"
@@ -143,9 +131,7 @@
                 android:hint="@string/what_is_your_brand" android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                 android:textColor="@android:color/black" android:id="@+id/brand_p1_edit"
-                android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"/>
+                android:visibility="invisible"/>
         <EditText
                 android:layout_width="240dp"
                 android:layout_height="39dp"
@@ -159,9 +145,7 @@
                 android:hint="@string/what_is_your_brand" android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                 android:textColor="@android:color/black" android:id="@+id/brand_p2_edit"
-                android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"/>
+                android:visibility="invisible"/>
         <EditText
                 android:layout_width="240dp"
                 android:layout_height="39dp"
@@ -175,9 +159,7 @@
                 android:hint="@string/what_is_your_brand" android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                 android:textColor="@android:color/black" android:id="@+id/brand_p3_edit"
-                android:visibility="invisible"
-                android:importantForAutofill="no"
-                tools:targetApi="o"/>
+                android:visibility="invisible"/>
         <Button
                 android:text="@string/delete"
                 android:layout_width="130dp"
